@@ -1,5 +1,10 @@
 2002-05-22  Eric Blake  <ebb9@email.byu.edu>
 
+	* src/ast.h (NewAstArray): Make this a global function, to
+	workaround egcs-1.1.2 bug.
+
+2002-05-22  Eric Blake  <ebb9@email.byu.edu>
+
 	* src/decl.cpp: Allow interface int clone(); - see bug 2878.
 	* src/error.cpp: Add new UNIMPLEMENTABLE_INTERFACE warning.
 	* src/error.h: Ditto.
